--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,6 +6,14 @@ jobs:
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2
+      - name: Get changed files
+        id: cfs
+        uses: tj-actions/changed-files@v33
+      - name: List all changed files
+        run: |
+          for file in ${{ steps.cfs.outputs.all_changed_files }}; do
+            echo "$file was changed"
+          done
       - name: check file changed
         id: changed-files
         uses: tj-actions/changed-files@v33
